Created org.eclipse.ecf.filetransfer.identity.IFileID and FileIDFactory factory implementation.  Added code to implement API changes in org.eclipse.ecf.provider.filetransfer.  Added namespace extension to org.eclipse.ecf.provider.filetransfer.  Changed test code and ran.